removed about title and fixed paragraph spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -64,37 +64,28 @@
 
 /* About Section */
 
-.img {
-	height: 20rem;
-	width: 16rem;
-	border-radius: 5%;
-	margin-right: 2rem;
-	margin-top: 0.4rem;
-}
-
 .aboutMe {
-	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	min-height: 100vh;
+	width: 100%;
 	color: var(--font-color);
 }
 
-.aboutTitle {
-	font-family: var(--title-font);
-	align-items: flex-start;
-	margin-bottom: 2rem;
-	margin-right: 2rem;
-	text-decoration: underline;
-	text-decoration-color: var(--accent-color);
+.aboutDesc {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	max-width: 65rem;
 }
 
-.aboutDesc {
-	max-width: 800px;
+.aboutStory {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	margin-bottom: 15rem;
 }
 
 .aboutP {
@@ -106,6 +97,7 @@
 .skillSection {
 	display: flex;
 	flex-direction: column;
+	align-content: space-evenly;
 	margin-left: 1rem;
 }
 
@@ -175,16 +167,6 @@
 
 	/* About Section */
 
-	.img {
-		height: 11rem;
-		width: 11rem;
-		margin: 0 0 1rem 0;
-	}
-
-	.aboutMe {
-		max-width: 800px;
-	}
-
 	.aboutTitle {
 		font-weight: 200;
 		align-items: center;
@@ -196,6 +178,13 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+	}
+
+	.aboutStory {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		margin-bottom: 2rem;
 	}
 
 	.skillsTitle {
